Fixed overflows in gene/transcript info modals

--- a/inst/www/shinyngs.css
+++ b/inst/www/shinyngs.css
@@ -39,3 +39,13 @@ overriding the z-index we need from bootstrap.css  */
 .help{
   float:right; 
 }
+
+.modal-dialog{
+  width:auto;
+  max-width:90%;
+}
+
+.dataTables_wrapper{
+  overflow-x: scroll; 
+}
+}
